backends/tfhe-cuda-backend/src/bindings.rs

extern "C" {
    pub fn cuda_programmable_bootstrap_amortized_lwe_ciphertext_vector_32(
        stream: *mut ffi::c_void,
        gpu_index: u32,
        lwe_array_out: *mut ffi::c_void,
        lwe_output_indexes: *const ffi::c_void,
        lut_vector: *const ffi::c_void,
        lut_vector_indexes: *const ffi::c_void,
        lwe_array_in: *const ffi::c_void,
        lwe_input_indexes: *const ffi::c_void,
        bootstrapping_key: *const ffi::c_void,
        pbs_buffer: *mut i8,
        lwe_dimension: u32,
        glwe_dimension: u32,
        polynomial_size: u32,
        base_log: u32,
        level_count: u32,
        num_samples: u32,
    );
}
extern "C" {
    pub fn cuda_programmable_bootstrap_amortized_lwe_ciphertext_vector_64(
        stream: *mut ffi::c_void,
        gpu_index: u32,
        lwe_array_out: *mut ffi::c_void,
        lwe_output_indexes: *const ffi::c_void,
        lut_vector: *const ffi::c_void,
        lut_vector_indexes: *const ffi::c_void,
        lwe_array_in: *const ffi::c_void,
        lwe_input_indexes: *const ffi::c_void,
        bootstrapping_key: *const ffi::c_void,
        pbs_buffer: *mut i8,
        lwe_dimension: u32,
        glwe_dimension: u32,
        polynomial_size: u32,
        base_log: u32,
        level_count: u32,
        num_samples: u32,
    );
}
extern "C" {
    pub fn cleanup_cuda_programmable_bootstrap_amortized(
        stream: *mut ffi::c_void,
        gpu_index: u32,
        pbs_buffer: *mut *mut i8,
    );
}
extern "C" {
    pub fn scratch_cuda_programmable_bootstrap_32(
        stream: *mut ffi::c_void,
        gpu_index: u32,
        buffer: *mut *mut i8,
        glwe_dimension: u32,
        polynomial_size: u32,
        level_count: u32,
        input_lwe_ciphertext_count: u32,
        allocate_gpu_memory: bool,
    );
}
extern "C" {
    pub fn scratch_cuda_programmable_bootstrap_64(
        stream: *mut ffi::c_void,
        gpu_index: u32,
        buffer: *mut *mut i8,
        glwe_dimension: u32,
        polynomial_size: u32,
        level_count: u32,
        input_lwe_ciphertext_count: u32,
        allocate_gpu_memory: bool,
    );
}
extern "C" {
    pub fn cuda_programmable_bootstrap_lwe_ciphertext_vector_32(
        stream: *mut ffi::c_void,
        gpu_index: u32,
        lwe_array_out: *mut ffi::c_void,
        lwe_output_indexes: *const ffi::c_void,
        lut_vector: *const ffi::c_void,
        lut_vector_indexes: *const ffi::c_void,
        lwe_array_in: *const ffi::c_void,
        lwe_input_indexes: *const ffi::c_void,
        bootstrapping_key: *const ffi::c_void,
        buffer: *mut i8,
        lwe_dimension: u32,
        glwe_dimension: u32,
        polynomial_size: u32,
        base_log: u32,
        level_count: u32,
        num_samples: u32,
        lut_count: u32,
        lut_stride: u32,
    );
}
extern "C" {
    pub fn cuda_programmable_bootstrap_lwe_ciphertext_vector_64(
        stream: *mut ffi::c_void,
        gpu_index: u32,
        lwe_array_out: *mut ffi::c_void,
        lwe_output_indexes: *const ffi::c_void,
        lut_vector: *const ffi::c_void,
        lut_vector_indexes: *const ffi::c_void,
        lwe_array_in: *const ffi::c_void,
        lwe_input_indexes: *const ffi::c_void,
        bootstrapping_key: *const ffi::c_void,
        buffer: *mut i8,
        lwe_dimension: u32,
        glwe_dimension: u32,
        polynomial_size: u32,
        base_log: u32,
        level_count: u32,
        num_samples: u32,
        lut_count: u32,
        lut_stride: u32,
    );
}
extern "C" {
    pub fn cleanup_cuda_programmable_bootstrap(
        stream: *mut ffi::c_void,
        gpu_index: u32,
        pbs_buffer: *mut *mut i8,
    );
}
extern "C" {
    pub fn has_support_to_cuda_programmable_bootstrap_cg_multi_bit(
        glwe_dimension: u32,
        polynomial_size: u32,
        level_count: u32,
        num_samples: u32,
    ) -> bool;
}
extern "C" {
    pub fn cuda_convert_lwe_multi_bit_programmable_bootstrap_key_64(
        stream: *mut ffi::c_void,
        gpu_index: u32,
        dest: *mut ffi::c_void,
        src: *const ffi::c_void,
        input_lwe_dim: u32,
        glwe_dim: u32,
        level_count: u32,
        polynomial_size: u32,
        grouping_factor: u32,
    );
}
extern "C" {
    pub fn scratch_cuda_multi_bit_programmable_bootstrap_64(
        stream: *mut ffi::c_void,
        gpu_index: u32,
        pbs_buffer: *mut *mut i8,
        glwe_dimension: u32,
        polynomial_size: u32,
        level_count: u32,
        input_lwe_ciphertext_count: u32,
        allocate_gpu_memory: bool,
    );
}
extern "C" {
    pub fn cuda_multi_bit_programmable_bootstrap_lwe_ciphertext_vector_64(
        stream: *mut ffi::c_void,
        gpu_index: u32,
        lwe_array_out: *mut ffi::c_void,
        lwe_output_indexes: *const ffi::c_void,
        lut_vector: *const ffi::c_void,
        lut_vector_indexes: *const ffi::c_void,
        lwe_array_in: *const ffi::c_void,
        lwe_input_indexes: *const ffi::c_void,
        bootstrapping_key: *const ffi::c_void,
        buffer: *mut i8,
        lwe_dimension: u32,
        glwe_dimension: u32,
        polynomial_size: u32,
        grouping_factor: u32,
        base_log: u32,
        level_count: u32,
        num_samples: u32,
        lut_count: u32,
        lut_stride: u32,
    );
}
extern "C" {
    pub fn cleanup_cuda_multi_bit_programmable_bootstrap(
        stream: *mut ffi::c_void,
        gpu_index: u32,
        pbs_buffer: *mut *mut i8,
    );
}
